Devloc => Fixed auth broken style

--- a/app/assets/stylesheets/auth.scss
+++ b/app/assets/stylesheets/auth.scss
@@ -3,9 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 100px 0 50px 0;
+  padding: 50px 0 50px 0;
   min-height: 100vh;
-  background-color: #131116;
+  background-color: #0d021c;
 
   .auth_container {
     width: 100%;
@@ -24,6 +24,7 @@
         padding: 50px 1.4em;
         border-radius: 2px;
         background-color: white;
+        box-shadow: rgb(255, 255, 255) 0px 20px 50px;
 
         h1 {
           text-align: center;
@@ -66,18 +67,19 @@
               color: #131116;
               border: 1px solid #3e393942;
 
-
               &:active {
                 background-color: #F6F9FE;
               }
             }
 
-            button {
+            input[type="submit"] {
+              background-color: #0d021c;
               color: white !important;
               width: 100%;
             }
           }
         }
+
 
         .grouped_auth_option {
           margin: 1.5em 0;
@@ -94,7 +96,16 @@
             text-decoration: underline;
           }
         }
+
+        @media (max-width: 768px) {
+          min-height: 100vh;
+        }
       }
     }
+  }
+
+  @media (max-width: 768px) {
+    padding: 0;
+    display: block !important;
   }
 }
